# sixt_challange

./: .gitignore  pyproject.toml  requirements.txt
config/: config.py  types.py
notebooks/: SIXT_DataScience_Task202402.ipynb
src/: pipeline.py
src/components/feature_engineering/: feature_engineering.py  steps.py
src/components/model_training/: model_training.py  steps.py
src/components/preprocessing/: preprocessing.py  steps.py
src/util/: util.py
